--- a/popup/index.html
+++ b/popup/index.html
@@ -6,13 +6,28 @@
 </head>
 
 <body>
-  <h1 id="title">Web Destroyer</h1>
-  <button id="click">Toggle stupid mode</button>
-  <button id="enable">Enable</button>
-  <button id="remove">Remove</button>
-  <input type="color" id="color" value="#000000">
-  <input type="number" id="weight" value="1">
-  <button id="capture">Capture</button>
+  <div class="d-flex flex-column">
+    <div class="action-button" id="stupid">
+      <p class="title">stupid mode</p>
+    </div>
+
+    <div class="action-button" id="enable">
+      <p class="title">enable</p>
+    </div>
+
+    <div class="action-button" id="remove">
+      <p class="title">remove</p>
+    </div>
+
+    <div class="action-button d-flex align-items-center">
+      <input type="color" id="color" placeholder="Color">
+      <input class="flex-grow-1" type="number" id="weight" placeholder="Weight" style="margin-left: 5px;">
+    </div>
+
+    <div class="action-button" id="capture">
+      <p class="title">capture</p>
+    </div>
+  </div>
 </body>
 
 </html>
