--- a/popup/index.html
+++ b/popup/index.html
@@ -25,7 +25,7 @@
       <span class="icon" id="line-mode"><i class="la la-pen"></i></span>
       <span class="icon" id="image-mode"><i class="la la-image"></i></span>
       <span class="icon" id="fire-mode"><i class="la la-fire"></i></span>
-      <span class="icon" id="bomb-mode"><i class="la la-bomb"></i></span>
+      <span class="icon" id="milktea-mode"><i class="la la-coffee"></i></span>
     </div>
 
     <h5>Line settings</h5>
