audio, hammer, milktea, stupid audio

--- a/popup/index.html
+++ b/popup/index.html
@@ -26,6 +26,7 @@
       <span class="icon" id="image-mode"><i class="la la-image"></i></span>
       <span class="icon" id="fire-mode"><i class="la la-fire"></i></span>
       <span class="icon" id="milktea-mode"><i class="la la-coffee"></i></span>
+      <span class="icon" id="hammer-mode"><i class="la la-hammer"></i></span>
     </div>
 
     <h5>Line settings</h5>
